caso1/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    deployment: fake-api
    service: fake-api
  name: fake-api
spec:
  hostnames:
  - api.fortaleza.bank
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw-l1
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: bff-service
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
